<!-- Login -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="MissingConstraints" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="274dp"
            android:layout_height="118dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <Button
                android:id="@+id/loginpage_getOtpbtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginpagebtns"
                android:fontFamily="@font/oxygen"
                android:text="@string/loginpage_get_otp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginpage_phone" />

            <EditText
                android:id="@+id/loginpage_phone"
                android:layout_width="194dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:inputType="phone"
                android:hint="@string/loginpage_phone_number"
                android:textAlignment="center"
                android:textColor="@color/Gray"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/loginpage_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="274dp"
            android:layout_height="118dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <EditText
                android:id="@+id/loginpage_enterotp"
                android:layout_width="194dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:inputType="phone"
                android:hint="@string/loginpage_enter_otp"
                android:textAlignment="center"
                android:textColor="@color/Gray"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/loginpage_loginbtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/loginpagebtns"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/loginpage_loginbtn"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginpage_enterotp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/loginpage_enterotp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/key" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="342dp"
            android:background="@drawable/loginpage_constraintlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="182dp"
                android:layout_height="57dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/pt_serif_bold"
                android:text="KaaryaKhoj"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="135dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/pt_serif_italic"
                android:text="Aapka Kaarya"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="135dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/pt_serif_italic"
                android:text="Humari Khoj"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_worker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/pt_serif_bold_italic"
                android:text="@string/loginpage_not_registered"
                android:textColor="@color/Gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginpage_registerhere"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/pt_serif_bold_italic"
                android:text="@string/loginpage_register_here"
                android:textColor="@color/DeepSkyBlue"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/loginpage_changelanguage"
            android:layout_width="114dp"
            android:layout_height="33dp"
            android:layout_marginTop="27dp"
            android:clickable="true"
            android:text="Change Language"
            android:textColor="@color/DarkRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
