<!-- Login -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="MissingConstraints" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="30dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verifyphoneconstraintLayout2"
            android:layout_width="274dp"
            android:layout_height="118dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

            <Button
                android:id="@+id/verifyphonepage_getOtpbtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginpagebtns"
                android:fontFamily="@font/oxygen"
                android:text="@string/verifyphonepage_send_otp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verifyphonepage_phone" />

            <EditText
                android:id="@+id/verifyphonepage_phone"
                android:layout_width="194dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:hint="@string/verifyphonepage_enter_phone_number"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/Gray"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/verifyphonepage_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="274dp"
            android:layout_height="118dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyphoneconstraintLayout2">

            <EditText
                android:id="@+id/verifyphonepage_enterotp"
                android:layout_width="194dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/playfair_display"
                android:inputType="phone"
                android:hint="@string/verifyphonepage_enter_otp"
                android:textAlignment="center"
                android:textColor="@color/Gray"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/verifyphonepage_verifyotpbtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/loginpagebtns"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/verifyphonepage_verify"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verifyphonepage_enterotp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/verifyphonepage_enterotp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/key" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="342dp"
            android:background="@drawable/loginpage_constraintlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="182dp"
                android:layout_height="57dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="84dp"
                android:fontFamily="@font/pt_serif_bold"
                android:text="KaaryaKhoj"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="135dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/pt_serif_italic"
                android:text="Aapka Kaarya"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="135dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/pt_serif_italic"
                android:text="Humari Khoj"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="64dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_worker" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
